added a for loop, two functions, and added an array for the topics section

--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -65,7 +65,10 @@
 
         <ul>
 
-          <li>Enter your JavaScript notes here</li>
+          <li>A variable is a named container that allows us to restore data in our code</li>
+          <li>Control flow is the order in which a computer executes code in a script</li>
+          <li>a 'for' loop is defined by a variable 'x' and starting at the zero index followed by the variable name.length followed by a x++</li>
+          <li>when creating a function we also must call to that function for it to produce the desired action</li>
 
         </ul>
 
